app/assets/stylesheets/chrome.css
/* ... */
#content.ticker_on #ticker {
  display  : block;
  position : absolute;
  width    : 14em;
  bottom   : 0;
  right    : 0;
  top      : 0;
  z-index  : 10000;
  overflow : auto;
  background-color: #CDE4F1;
  text-align: center;
}

#ticker #intro {
  padding: 1em 0.2em 0;
}

#ticker #intro p {
  margin-top: 1em;
}

#ticker ul {
  background-color: #E4E6E6;
  margin: 0;
  text-align: left;
}

#ticker ul a {
  color           : #395A7F;
  text-decoration : none;
  display         : block;
  float : left;
  width : 12em;
}

#ticker li {
  padding       : 0.8em 0 0.8em 0.8em;
  min-height    : 25px;
  border-color  : #AACBE0;
  border-style  : solid;
  border-width  : 1px 0;
  font-size     : 0.8em;
  margin-bottom : 0;
}

#ticker li.loading > div {
  margin : 1em auto;
  width  : 13px;
}

#ticker .avatar {
  width      : 35px;
  height     : 35px;
  margin-right : 0.5em;
  text-align : right;
}

#ticker .avatar img {
  width : 90%;
}

#ticker div.badge {
  width : 16px;
  height : 16px;
  bottom : 0;
  left : 0;
  position : absolute;
}

#ticker div.badge.feature_point {
  background : transparent url('ticker-bike-plus.png') no-repeat scroll top left;
}

#ticker div.badge.vote {
  background : transparent url('ticker-thumbs-up.png') no-repeat scroll top left;
}

#ticker div.badge.comment {
  background : transparent url('ticker-comment.png') no-repeat scroll top left;
}

/* HiderSlider Widget */
.ui-sliderhider-container {
/*  background: #fff url('ticker-heart.png') 10px center no-repeat scroll;*/
  background: #3690CC url(button-gradient.png) center center repeat-x scroll;
  color:#fff;
  padding: 0 30px;
  font-size: 0.8em;
  font-weight: bold;
  -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
          border-radius: 2px;
}
.ui-sliderhider-title {
}
.ui-sliderhider-content {
  /* We leave 1px width to deal with Chrome's fractional pixel problem, but
     that leaves 1px of gray. This blends it in with the container. */
  background: #E4E6E6 url(button-gradient.png) no-repeat left center scroll;
  padding-left:4px;
}
.ui-sliderhider-inner {
}
.ui-sliderhider-slider {
  background: transparent url(slider-wedge-greaterthan.gif) no-repeat left center scroll;
}
.ui-sliderhider-close {
  display: none;
  width: 14px;
  height: 14px;
  background: url("close-bttn.png") no-repeat scroll 0 0 transparent;
  text-indent: -9999px;
  position: absolute;
  top: 50%;
  right: 0;
  margin-top: -7px !important;
  cursor: pointer;
}
.ui-sliderhider-container .ui-sliderhider-close:hover {
  background-position: bottom left;
}

.ui-sliderhider-container .ui-sliderhider-icon {
  float:left;
  width: 15px;
  height: 15px;
  background: url("ticker-thumbs-up.png") no-repeat scroll 0 0 transparent;
  text-indent: -9999px;
  position: absolute;
  top: 50%;
  left: 10px;
  margin-top: -7px !important;

}

.ui-sliderhider-slider.ui-slider .ui-slider-handle {
  width:12px;
  height:20px;
  top: -5px;
  border:none;
  background: url("slider-handle.gif") no-repeat scroll 0 0 transparent;
}

/*
 *
 * Media Queries for Layout & Style Overrides
 *
 */

/* smartphones (portrait and landscape) ----------- */
@media only screen
and (min-device-width : 320px)
and (max-device-width : 480px) {
  #wrapper { font-size: 10px; }
  #header {
    height: 4em;
  }
  #content {
    top: 4em;
  }
  #site-title {
    font-size: 2.25em;
  }
  #access {
    margin-top: 1.5em;
  }
  #footer {
    bottom: 4.5em;
    right: 0;
    left: 0;
    text-align: center;
    z-index: 200;
  }
  #footer button {
    display: inline;
  }
}

/* smartphones (landscape) ----------- */
@media only screen
and (min-width : 321px) {
}

/* smartphones (portrait) ----------- */
@media only screen
and (max-width : 320px) {
}

/* iPads (portrait and landscape) ----------- */
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px) {
}

/* iPads (landscape) ----------- */
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : landscape) {
}

/* iPads (portrait) ----------- */
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : portrait) {
}

/* desktops and laptops ----------- */
@media only screen
and (min-width : 640px) {
  #wrapper { font-size: 15px; }
}

/* large screens ----------- */
@media only screen
and (min-width : 1025px) {
  #wrapper { font-size: 16px; }
}

/* extra-large screens ----------- */
@media only screen
and (min-width : 1824px) {
  #wrapper { font-size: 18px; }
}

/* iPhone 4 ----------- */
@media
only screen and (-webkit-min-device-pixel-ratio : 1.5),
only screen and (min-device-pixel-ratio : 1.5) {
}

/* ----------- end Media Queries (NOTE: THESE SHOULD COME LAST) ----------- */

